# SDL2_Image_Starter

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
