cmake_minimum_required(VERSION 3.10)
project(SDL2_Image_Starter)

set(CMAKE_CXX_STANDARD 14)

execute_process(COMMAND sdl2-config --cflags RESULT_VARIABLE CMD_RES OUTPUT_VARIABLE SDL2_CFLAGS ERROR_VARIABLE ERR_VAR OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND sdl2-config --libs RESULT_VARIABLE CMD_RES OUTPUT_VARIABLE SDL2_LIBS ERROR_VARIABLE ERR_VAR OUTPUT_STRIP_TRAILING_WHITESPACE)
message("SDL2_CFLAGS=${SDL2_CFLAGS}; SDL2_LIBS=${SDL2_LIBS}; CMD_RES=${CMD_RES}; ERR_VAR=${ERR_VAR}")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lSDL2_image ${SDL2_CFLAGS} ${SDL2_LIBS} -lSDL2_ttf")

file(COPY images DESTINATION ${CMAKE_BINARY_DIR})

add_executable(SDL2_Image_Starter main.cpp Game.cpp Game.h)